...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.view.Settings">

  <EditText
      android:id="@+id/editTextOwnerName"
      android:layout_width="255dp"
      android:layout_height="46dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="22dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Rambo"
      app:layout_constraintEnd_toStartOf="@+id/btnCreateAppOwner"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <EditText
      android:id="@+id/editTextDeleteChannel"
      android:layout_width="255dp"
      android:layout_height="46dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="24dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="..."
      app:layout_constraintEnd_toStartOf="@+id/btnCreateAppOwner"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/textView3"
...
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDeleteChannel"
      app:layout_constraintVertical_bias="0.11" />

  <Button
      android:id="@+id/btnAppOwner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:text="Add"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.75"
      app:layout_constraintStart_toEndOf="@+id/editTextOwnerName"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnDeleteChannel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:text="Remove"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.75"
      app:layout_constraintStart_toEndOf="@+id/editTextOwnerName"
      app:layout_constraintTop_toBottomOf="@+id/btnAppOwner" />

  <Button
...
